<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:title="@string/menu_header_notifications">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_notification_list"
                    android:icon="@drawable/ic_baseline_dehaze_24"
                    android:title="@string/notification_list_menu_item" />
                <item
                    android:id="@+id/menu_create_notification"
                    android:icon="@drawable/ic_baseline_add_24"
                    android:title="@string/create_notification_menu_item" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_header_channels">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_notification_channel_list"
                    android:icon="@drawable/ic_baseline_dehaze_24"
                    android:title="@string/notification_channel_list_menu_item" />
                <item
                    android:id="@+id/menu_create_notification_channel"
                    android:icon="@drawable/ic_baseline_add_24"
                    android:title="@string/create_notification_channel_menu_item" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_header_android_settings">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/menu_group_settings">
                <item
                    android:id="@+id/menu_app_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/android_settings_menu_item" />
                <item
                    android:id="@+id/menu_app_notification_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/android_notification_settings_menu_item" />
            </group>
        </menu>
    </item>



</menu>